[package]
name = "sol-fee-tracker"
version = "0.1.0"
edition = "2024"

[profile.dev]
incremental = true


[dependencies]
solana-sdk = "2.2.2"
solana-client = "2.2.2"
solana-account-decoder = "2.2.2"
borsh = "0.10.3"
borsh-derive = "0.10.3"
tokio = { version = "1.44.2", features = ["full"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
axum = { version = "0.7", features = ["ws"] }
clap = { version = "4.4.6", features = ["derive"] }
futures-util = "0.3.31"
futures = "0.3.31"
base64 = "0.22.1"
spl-token = "8.0.0"
spl-associated-token-account = "6.0.0"
spl-token-2022 = "7.0.0"
memoffset = "0.9.1"
toml = "0.8.19"
anyhow = "1.0.90"
once_cell = "1.20.3"
bincode = "1.3"
reqwest = { version = "0.11", features = ["json"] }
rand = "0.8"
ctrlc = "3.4.2"
async-trait = "0.1.77"
yellowstone-grpc-client = "6.1.0"
yellowstone-grpc-proto = "6.1.0"
maplit = "1.0.2"
tonic = "0.13.0"
bs58 = "0.5"

[dev-dependencies]
tokio-tungstenite = "0.21"

[[example]]
name = "test"
path = "examples/test.rs"
